tests/NormalTests/paczka2/big_fuzzy/82776653.err
Error in line 12: S792 S792 25,9
Error in line 18: OWbj A28 94,2
Error in line 25: 82p A738 37,2
Error in line 33: JHpMB7s2rTw A28 95,0
Error in line 26: S792 A28 53,1
Error in line 37: JHpMB7s2rTw S792 42,9
Error in line 43: JHpMB7s2rTw A28 60,6
Error in line 44: S792 A52 61,5
Error in line 48: KWIkamVu A28 41,0
Error in line 62: KWIkamVu S792 43,7
Error in line 75: KWIkamVu A738 29,6
Error in line 91: h0VY6o S792 76,0
Error in line 94: 82p A738 319,3
Error in line 118: JHpMB7s2rTw A738 3,9
Error in line 124: OWbj A28 19,1
Error in line 131: OIGQuwfga A28 151,88
Error in line 143: S792 S792 183,72
Error in line 140: JHpMB7s2rTw A52 217,3
Error in line 121: OIGQuwfga A28 72,3
Error in line 152: OIGQuwfga S792 11,2
Error in line 136: h0VY6o A738 83,1
Error in line 153: OIGQuwfga A28 60,0
Error in line 162: h0VY6o S792 57,0
Error in line 166: KWIkamVu A738 30,0
Error in line 147: S792 S792 344,3
Error in line 173: OIGQuwfga S792 17,8
Error in line 174: OIGQuwfga A738 63,4
Error in line 183: OIGQuwfga S792 31,9
Error in line 184: 82p S792 20,7
Error in line 185: OIGQuwfga A738 62,6
Error in line 197: OIGQuwfga A52 54,1
Error in line 199: S792 A28 92,3
Error in line 209: OIGQuwfga A738 58,8
Error in line 229: OWbj A52 18,4
Error in line 232: S792 A28 29,0
Error in line 235: JHpMB7s2rTw A52 80,1
Error in line 238: OIGQuwfga A52 245,1
